样式改版  得分描述字体加粗

--- a/SkyBetufi/SourceCode/SkySrc/SkyUI/MMBBMatch/MBViews/SkyBallHetiRedHTMatchDataRightCell.xib
+++ b/SkyBetufi/SourceCode/SkySrc/SkyUI/MMBBMatch/MBViews/SkyBallHetiRedHTMatchDataRightCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,23 +11,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SkyBallHetiRedHTMatchDataRightCell">
-            <rect key="frame" x="0.0" y="0.0" width="1050" height="30"/>
+            <rect key="frame" x="0.0" y="0.0" width="980" height="30"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="1050" height="29.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="980" height="30"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xGh-CN-5LH">
-                        <rect key="frame" x="0.0" y="0.0" width="70" height="28.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="29"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="70" id="cK7-3i-Fmz"/>
+                            <constraint firstAttribute="width" id="cK7-3i-Fmz"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.066666666669999999" green="0.066666666669999999" blue="0.066666666669999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20b-sS-f3P">
-                        <rect key="frame" x="70" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="wlU-Tv-a3s"/>
                         </constraints>
@@ -38,7 +36,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZLK-pU-ndj">
-                        <rect key="frame" x="140" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="70" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="JSY-us-o6d"/>
                         </constraints>
@@ -47,7 +45,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hoP-2E-ayq">
-                        <rect key="frame" x="210" y="0.0" width="70" height="28.5"/>
+                        <rect key="frame" x="140" y="0.0" width="70" height="29"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="LwF-BE-rXI"/>
                         </constraints>
@@ -56,7 +54,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xI-B2-r5w">
-                        <rect key="frame" x="280" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="210" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="iuU-Iv-7MU"/>
                         </constraints>
@@ -65,7 +63,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6B-ZW-F2t">
-                        <rect key="frame" x="980" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="910" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="Drj-ZF-v9z"/>
                         </constraints>
@@ -74,7 +72,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rEG-bo-DIq">
-                        <rect key="frame" x="630" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="560" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="bsl-VU-Vvx"/>
                         </constraints>
@@ -83,7 +81,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8D6-aS-JMk">
-                        <rect key="frame" x="560" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="490" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="u56-q9-7EK"/>
                         </constraints>
@@ -92,7 +90,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dqI-ir-5oV">
-                        <rect key="frame" x="490" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="420" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="lNU-hz-5C4"/>
                         </constraints>
@@ -101,7 +99,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7r-QS-TxO">
-                        <rect key="frame" x="420" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="350" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="uzm-k8-Uxv"/>
                         </constraints>
@@ -110,7 +108,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iUs-cb-xkB">
-                        <rect key="frame" x="350" y="0.0" width="70" height="28.5"/>
+                        <rect key="frame" x="280" y="0.0" width="70" height="29"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="9s0-ho-cPC"/>
                         </constraints>
@@ -119,7 +117,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VVU-N9-Ien">
-                        <rect key="frame" x="700" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="630" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="zJi-aO-Jvx"/>
                         </constraints>
@@ -128,7 +126,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ju-2K-Ad7">
-                        <rect key="frame" x="770" y="0.0" width="70" height="28.5"/>
+                        <rect key="frame" x="700" y="0.0" width="70" height="29"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="3pQ-BG-7fc"/>
                         </constraints>
@@ -137,7 +135,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ab3-0z-cXH">
-                        <rect key="frame" x="840" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="770" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="g22-OG-qoi"/>
                         </constraints>
@@ -146,7 +144,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsu-rf-BEX">
-                        <rect key="frame" x="910" y="0.0" width="70" height="29.5"/>
+                        <rect key="frame" x="840" y="0.0" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="r9f-no-rJj"/>
                         </constraints>
@@ -155,7 +153,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ddz-yg-rzO">
-                        <rect key="frame" x="0.0" y="28.5" width="1050" height="1"/>
+                        <rect key="frame" x="0.0" y="29" width="980" height="1"/>
                         <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="hVT-oH-2re"/>
